# etcminer

./: CMakeLists.txt  CMakePresets.json  README.md
etcminer/: main.cpp
examples/: CMakeLists.txt  etchash_test.c
libdevcore/: vector_ref.h
libethash/: CMakeLists.txt  internal.c  internal.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  jsonrpc_getwork.h
